# Project-Adriane

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: code_quality.yaml  test.yaml
app/: __init__.py  main.py
app/data/db_connection/: SupabaseClient.py
app/service/api/: config.py
app/service/api/client/: __init__.py  client.py
app/service/api/v1/endpoints/: api.py  initiate_api.py
app/test/: conftest.py  health_check_tests.py  test_server_startup.py
scripts/: lint.sh
